<resources>
    <string name="app_name">Expresion Express</string>
    <!--INSTRUCCIONES-->
    <string name="instruccionesTit">Instruccions:</string>
    <string name="instrucciones">“Expresion Express” és un joc de taula de l’any 1996 de la marca MB
        Juegos que consisteix en endevinar paraules a partir de la descripció que se’n fa d’aquestes
        sense poder-ne dir cap de la seva mateixa família.
        Els jugadors formen 2 equips i s’asseuen intercaladament, és a dir, si hi ha l’equip A i l’e
        quip B, es col·loquen ABABAB... Al començament de cada ronda, es posa en marxa un cronòmetre
        (amb un temps aleatori) i l’integrant de l’equip que té el torn comença a definir la paraula
        que li ha tocat. Una vegada la resta de l’equip l’ha encertada, el jugador que definia la pa
        raula passa el torn (en el joc original un disc, en l’aplicació serà el mòbil en joc local)
        al jugador que té al costat (tal i com estan asseguts, serà de l’altre equip) i llavors és l
        ’altre equip el que li toca endevinar la paraula. Tot continua així fins que s’acaba el temp
        s. En quan això passa, l’equip que tenia el torn de definició perd la ronda i, llavors, l’al
        tre equip és qui avança una casella de les 7 que hi ha al tauler. En la següent ronda, l’equ
        ip que comença a definir la paraula és l’equip que ha perdut la que s’estava jugant.
        El joc continua així fins que un dels dos equips arriba a l’última casella, fet que indica q
        ue aquest és el guanyador.
    </string>
    <!--EQUIPO ACTIVITY-->
    <string name="equipo">Equip</string>
    <string name="equipo1">Equip 1</string>    <!--Tambien en TABLERO-->
    <string name="equipo2">Equip 2</string>    <!--Tambien en TABLERO-->
    <string name="participantes">Participants</string>
    <string name="siguiente">Següent</string> <!--Tambien en TABLERO-->
    <string name="faltaEquipo">Falta nom de l\'equip</string>
    <string name="faltaParticipantes">Falta afegir participants</string>

    <!--MenuPrincipal ACTIVITY-->
    <string name="expresion">Expresion</string>
    <string name="express">Express</string>
    <string name="play">Jugar</string>
    <string name="multiplayer">Multijugador</string>
    <string name="instru">Instruccions</string>

    <!--MultMenu ACTIVITY-->
    <string name="create">Crear</string>
    <string name="join">Unir-se</string>
    <string name="R_EmptyCode">Falta introduir el codi de la partida</string>
    <string name="R_WrongCode">Codi incorrecte</string>
    <string name="codi_repe">Codi existent, utilizti un altre</string>

    <!--TABLERO ACTIVITY-->
    <string name="posicion">Posició</string>
    <string name="turno">Torn</string>
    <string name="tiempo">Temps</string>
    <string name="pasa">Passa</string>
    <string name="gana">Ha guanyat l\'equip </string>
    <string name="fin">FINAL DEL JOC</string>
    <string name="repite">Torna a jugar</string>
    <string name="acaba">Acaba</string>
    <string name="not_exist">Document no existeix</string>
    <string name="error_lectura">Error lectura Equipo</string>
    <string name="error_escritura">Error escriptura</string>
    <string name="partida">Partida</string>
    <string name="casilla">Casella</string>
    <string name="creaEquips">Apreta Passa quan s\'hagi creat l\'altre equip</string>


    <!--LISTA PALABRAS-->
    <array name="words">
        <item>POSAR BENZINA</item>
        <item>CORONACIÓ</item>
        <item>CONJUNT</item>
        <item>STOP</item>
        <item>PORC</item>
        <item>QUEIXAL</item>
        <item>EMBARASSADA</item>
        <item>FLASH</item>
        <item>BLANCANEUS</item>
        <item>BARNÚS</item>
        <item>CINTURA</item>
        <item>ESPECIALISTA</item>
        <item>PRUNA</item>
        <item>ASSASSINAT</item>
        <item>CACAUET</item>
        <item>SIDRA</item>
        <item>FESTEJAR</item>
        <item>CULLEROT</item>
        <item>HAMACA</item>
        <item>CONVICTE</item>
        <item>MÒMIA</item>
        <item>DIVERTIT</item>
        <item>PISCINA</item>
        <item>EL MAG D\'OZ</item>
        <item>PASTÍS NUPCIAL</item>
        <item>KARATE</item>
        <item>INSTINTO</item>
        <item>JOIES REIALS</item>
        <item>FET I AMAGAR</item>
        <item>SORBET</item>
        <item>MALSON</item>
        <item>SOLAPA</item>
        <item>OR</item>
        <item>UDOL</item>
        <item>BUMERANG</item>
        <item>ACCIDENT</item>
        <item>TRAMVIA</item>
        <item>LA MANXA</item>
        <item>BUGADERA</item>
        <item>GRADUAT</item>
        <item>POSTRES</item>
        <item>CORREUS</item>
        <item>GRÀCIA DE DÈU</item>
        <item>OLORAR</item>
        <item>FER EL DOBLET</item>
        <item>PRESTATGE</item>
        <item>FAR</item>
        <item>SIRENA</item>
        <item>ARRISSAR</item>
        <item>DRAGAR</item>
        <item>RIEROL</item>
        <item>VALL</item>
        <item>BITLLET</item>
        <item>BANDA SONORA</item>
        <item>PALAU</item>
        <item>BUFAR I FER AMPOLLES</item>
        <item>CASC</item>
        <item>ESCOMBRA</item>
        <item>PAPALLONA</item>
        <item>AQUARI</item>
        <item>JOGUINA</item>
        <item>SOPA</item>
        <item>VICTORIA ABRIL</item>
        <item>CAP DE TURC</item>
        <item>CALVÍCIE</item>
        <item>VIUDO</item>
        <item>MAQUINAR QUELCOM</item>
        <item>ESTADI</item>
        <item>GALL D\'INDI</item>
        <item>LABERINT</item>
        <item>BURXAR</item>
        <item>GROS</item>
        <item>JOTA ARAGONESA</item>
        <item>DINAMITA</item>
        <item>OBSCÈ</item>
        <item>DEMÒCRATA</item>
        <item>MARIETA</item>
        <item>QUART</item>
        <item>LA TAPADORA</item>
        <item>SENYAL</item>
        <item>ZERO</item>
        <item>LLAMPEC</item>
        <item>FIL</item>
        <item>RELLISCÓS</item>
        <item>ASE</item>
        <item>DAMA D\'HONOR</item>
        <item>ALARMA</item>
        <item>CLAUSURA</item>
        <item>UNA DE JAIMITO</item>
        <item>ORDINADOR</item>
        <item>LÒBUL</item>
        <item>PILOT</item>
        <item>PADDLE</item>
        <item>VISTA AÈRIA</item>
        <item>RIC</item>
        <item>TORNADO</item>
        <item>APERITIU</item>
        <item>METRALLETA</item>
        <item>ALGA</item>
        <item>COR</item>
        <item>CORDÓ</item>
        <item>BARRET</item>
        <item>RIGOR MORTIS</item>
        <item>GRUA</item>
        <item>EL PIRULÍ</item>
        <item>MÀSCARA</item>
        <item>CASINO</item>
        <item>MANÈGA</item>
        <item>PAUSA</item>
        <item>GRA</item>
        <item>GOMA</item>
        <item>ENSENYAMENT</item>
        <item>NINA</item>
        <item>VESC</item>
        <item>XEMENEIA</item>
        <item>A FOSQUES</item>
        <item>PÈTAL</item>
        <item>GRAÓ</item>
        <item>SAUNA</item>
        <item>VISITAR</item>
        <item>BARRIL</item>
        <item>BOCA</item>
        <item>COMÈDIA</item>
        <item>ILLA</item>
        <item>LA PANTERA ROSA</item>
        <item>PRENDRE EL PÈL</item>
        <item>LLEVATAPS</item>
        <item>GUST</item>
        <item>AMANIDA MIXTA</item>
        <item>CORRAL</item>
        <item>ESTRELLA CINE</item>
        <item>FUETADA</item>
        <item>JUNGLA</item>
        <item>GALANT</item>
        <item>MALETA</item>
        <item>FOCA</item>
        <item>TALLAR</item>
        <item>BILLAR</item>
        <item>NOU</item>
        <item>CRIM</item>
        <item>KING KONG</item>
        <item>POLS</item>
        <item>CASSETTE</item>
        <item>ESMOLAT</item>
    </array>

</resources>
